Fix form restoration for pages with multiple forms.  bug 138892, r=rods@netscape.com, sr=attinasi@netscape.com, a=rjesup